GNU time NEWS                                         -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  'time --help' no longer incorrectly lists the short option -h as being
  supported.  Previously it was listed as being equivalent to --help.
  [bug introduced in time-1.8]

** Improvements

  time now uses the more portable waitpid and getrusage system calls
  instead of wait3.

  time can now be built using a C23 compiler.

* Noteworthy changes in release 1.9 (2018-03-12) [stable]

** Improvements

  time now reports percent CPU usage for programs lasting less then 1 second.
  previously, time would report '??%' if programs lasted less than 1 second.
  (adopted from Fedora).

** Changes in behaviour

  "time -p" no longer adds the "Command exited with non-zero status" message.
  This is a backward-incompatible change for better POSIX compliance.
  Many downstream distributions previously patched 'time' to behave this way
  (Debian added '-q', Fedora patched '-p').


* Noteworthy changes in release 1.8 (2017-11-07) [stable]

** Licensing

  First official release under GPLv3-or-later.
  Previous version (v1.7) was GPLv2-or-later.
  The code in the git repository has been updated to GPLv3-or-later
  in 2015 (in git-tagged version 1.7.1).


** New Features

  time supports new -q/--quiet option to suppresses abnormal
  program terminal (non-exit codes or signals).
  Modelled after Debian's  https://bugs.debian.org/56853 .

  time now uses the following exit codes (same as GNU coreutils' env):
   125 = Wrong usage or internal error prior to exec attempt.
   126 = Program located, but not usable.
   127 = Could not find program to exec.

  time now exits with code '128 + Signal number' when the program
  is terminated by a signal.
  Modelled after Debian's 'non-normal-exit' upstream patch,
  and behaves the same as GNU coreutils' timeout(1).

  time now reports MAX-RSS values correctly on modern systems